--- a/blogs-management.html
+++ b/blogs-management.html
@@ -79,6 +79,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-storage.js"></script>
     
     <script src="js/init-firebase.js"></script>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
+    <script src="js/renderblogs.js"></script>
 </body>
 </html>
